parser/tests/bad/for01-6.st
% range of a 'for' statement must have type 'int'
%   decreasing, no id, end

for decreasing: 3..1.0
  % empty
end for
